S4 96-106 | Enemy HP; FindWithTag(); timeline for dialogue; music & SFX

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ Argon_Assault/Assets/Standard Assets/
 Argon_Assault/Assets/StarSparrow/
 
 Argon_Assault/Assets/Samples/
+Argon_Assault/Assets/SkyBox Volume 2/
